style(*): fix navbar whitespace

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  */
 
 .container {
+  margin-top: 4em;
   display: flex;
   justify-content: center;
 }
@@ -35,6 +36,10 @@
   padding: 0;
   overflow: hidden;
   background-color: #24d5f2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .navbar-link {
@@ -98,6 +103,7 @@
   border-radius: 50%;
   height: 10em;
   width: 10em;
+  margin: 2em;
   background-color: #cbeff5; 
   border-style: none;
   transition-duration: 0.2s;
@@ -118,7 +124,6 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  
   transition-duration: 0.2s;
   margin: 5px;
 }
